--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url( 'https://fonts.googleapis.com/css2?family=Geologica:wght@100;200;300;400;500;600;900&display=swap');
+
 .App {
     text-align: center;
+    font-family: 'Geologica', sans-serif;
 }
 
 .App-logo {
@@ -13,14 +16,13 @@
 }
 
 .App-header {
-    background-color: #282c34;
+    /* background-color: #282c34; */
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    color: white;
 }
 
 .App-link {
